# Tese

./: .gitignore  instalacao.txt  medicoes.ods  nvprof_heat_diffusion.txt  teste.cu
CUDA/: multiplicarArrays.cu  testeCuda.cu
HPX/componentesTeste/: CMakeLists.txt  program_hpx_accumulator.cpp
HPX/componentesTeste/cliente/: accumulator_cliente.hpp
HPX/componentesTeste/servidor/: accumulator.cpp  accumulator.hpp
HPX/devices/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  getDevices  getDevices.cu
HPX/execucaoParalelaCPU/: CMakeLists.txt  teste1.cpp
HPX/matrizes/: CMakeLists.txt  cpuMM  cpuMM.cpp  hpxMatrixMultiplication.cu  matrixMultiplication.cpp
HPX/testeCuda/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  howToRun.txt  solution9.cu  teste1.cu  teste2.cu  teste3.cu  teste4.cu
HPXCL/: readme.txt
HPXCL/heatDiffusion/: heat_diffusion_from_file.cpp  heat_diffusion_kernel.cu  multi_GPU_heat_diffusion_from_file.cpp  multi_gpu_heat_diffusion_kernel.cu
HPXCL/multiplicacaoArray/: VA1_array_mul_from_file.cpp  VA2_array_mul_from_file.cpp  VB1_array_mul_from_file.cpp  VB2_array_mul_from_file.cpp  array_mul_from_file.cpp  array_mul_kernel.cu  build_kernel_from_file.cpp  example_kernel.cu
HPXCL/multiplicacaoMatriz/: build_kernel_from_file.cpp  example_kernel.cu  matrix_mul_from_file.cpp
HPXCL/nbody/: my_nbody.cpp  my_nbody_kernel.cu
HPXCL/nbody_nvidia/: multi_my_nvidia_nbody.cpp  multi_my_nvidia_nbody_kernel_1.cu  multi_my_nvidia_nbody_kernel_2.cu  my_nvidia_nbody.cpp  my_nvidia_nbody_kernel.cu  teste.cpp  teste_kernel.cu  teste_multi.cpp
HPXCL/shared_memory_test/: shared_memory_test.cpp  shared_memory_test_kernel.cu
NVRTC/: heat.cpp  nbody.cpp  nvidia_nbody.cpp
